# course_work_4

./: .gitignore  README.md  TASK_COURSE_WORK.md  main.py  pyproject.toml
data/json_db/: employment.json  experience.json  schedule.json
src/: api_errors.py  api_parser.py  api_schemes.py  config.py  data_base.py  hh_parser.py  user_interface.py  utils.py
tests/: test_api_errors.py  test_api_parser.py  test_data_base.py  test_hh_parser.py
