[tool.poetry]
name = "course-work-4"
version = "0.1.0"
description = ""
authors = ["di-m-dy <dimdy11.11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
html2text = "^2024.2.26"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
requests-mock = "^1.12.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]